# sunlight-agent-mvp

./: .env.example  .gitignore  README.md  pyproject.toml  start-server.cmd
evals/: batch_run.py  benchmark_harness.py  benchmark_inputs.jsonl  compare_ground_truth.py  sites.csv
sunlight/: config.py
sunlight/agent/: orchestrator.py  pipeline.py
sunlight/engine/: __init__.py  geometry.py  simulate.py  sunpath.py
sunlight/server/: app.py
sunlight/server/static/: index.html  scene3d.js
sunlight/tools/: __init__.py  assess.py  buildings.py  climate.py  geocode.py  websearch.py
tests/: test_geometry.py  test_simulate.py  test_sunpath.py
