[project]
name = "sunlight-agent"
version = "0.1.0"
description = "Agentic AI for accessible daylight assessment - deterministic solar engine + LLM orchestration layer (Seoul MVP)"
requires-python = ">=3.11"
dependencies = [
    "pvlib>=0.11",
    "shapely>=2.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "anthropic>=0.40",
    "timezonefinder>=6.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sunlight"]
